<resources>
    <string name="app_name">Crypto</string>
    <string name="title_news">News</string>
    <string name="title_market">Market</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="global_title">Global</string>
    <string name="global_stats_active_currencies">Active currencies</string>
    <string name="global_stats_total_market_cap_change">Total market cap change</string>
    <string name="global_stats_number_of_markets">Number of markets</string>
    <string name="global_shares">Global Shares</string>
    <string name="bitcoin_price">Bitcoin Price</string>
    <string name="company_profile_tab1">General</string>
    <string name="company_profile_tab2">News</string>
    <string name="company_profile_tab3">Links</string>
    <string name="company_profile_tab4">Markets</string>
    <string name="show_favourites">Show favourites</string>
    <string name="creating_notification">Creating of notification</string>
    <string name="choose_the_type_notification">Type of notification:</string>
    <string name="choose_the_time_intervalofnotification">Time interval of notification:</string>
    <string name="id_of_cryptocurrency">ID of cryptocurrency:</string>
    <string name="print_border_here">Print border in USD here</string>
    <string name="bottom_border">Bottom border:</string>
    <string name="top_border">Top border:</string>

    <string-array name="notificationTypes">
        <item>Single</item>
        <item>Border</item>
        <item>Cyclical</item>
    </string-array>

    <string-array name="notificationIntervals">
        <item> 30 sec</item>
        <item>1 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
</resources>