<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label=""
    app:startDestination="@id/navigation_market">

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.ru.crypto.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news"/>

    <fragment
        android:id="@+id/navigation_market"
        android:name="com.ru.crypto.ui.market.MarketFragment"
        android:label="@string/title_market"
        tools:layout="@layout/fragment_market" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.ru.crypto.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_global"
        android:name="com.ru.crypto.ui.global.GlobalFragment"
        android:label="@string/global_title"
        tools:layout="@layout/fragment_global"
        />
</navigation>