<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="globalStats"
            type="com.ru.crypto.models.GlobalCryptoData" />

    </data>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/numOfCurrenciesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/globalStatsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/global_stats_active_currencies" />

        <TextView
            android:id="@+id/numOfActiveCurrencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@{globalStats.data.activeCryptoCurrenciesNum}"
            style="@style/globalStatsTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/totalMarketCapChangeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numOfCurrenciesLayout"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            style="@style/globalStatsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/global_stats_total_market_cap_change" />

        <TextView
            android:id="@+id/totalMarketCapChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@{globalStats.data.marketCapChangePercentage24H}"
            style="@style/globalStatsTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/totalMarketCapChangeLayout"
        android:layout_marginBottom="5dp"
        android:id="@+id/numberOfMarketsLayout"
        android:orientation="horizontal">

        <TextView
            style="@style/globalStatsTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/global_stats_number_of_markets" />

        <TextView
            android:id="@+id/numOfMarkets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            style="@style/globalStatsTextStyle"/>
    </LinearLayout>
</RelativeLayout>
</layout>