<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/arctic">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/notification_creating_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notosansjp_thin"
            android:gravity="center"
            android:text="@string/creating_notification"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/container1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textView"
            tools:layout_editor_absoluteX="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNotificationType"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/choose_the_type_notification" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/notificationTypeSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:entries="@array/notificationTypes"
                    android:paddingStart="10dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textChooseCryptoCurrency"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="clip_vertical|center_vertical"
                    android:text="@string/id_of_cryptocurrency" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteIDOfCryptoCurrency"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="start"
                    android:hint="Print cryptocurrency ID"
                    android:paddingTop="0dp"
                    android:textColor="@color/white"
                    android:textColorHighlight="@color/white" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/container2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textNotificationInterval"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/choose_the_time_intervalofnotification" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/notificationIntervalSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:entries="@array/notificationIntervals"
                    android:gravity="center"
                    android:paddingStart="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/container4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textTopBorder"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/top_border"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextTextTopBorder"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/print_border_here"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textBottomBorder"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:text="@string/bottom_border"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextBottomBorder"
                    style="@style/creationNotificationStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/print_border_here"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/container5">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonCreatingOk"
                    style="@style/creationNotificatiomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="OK" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttcnCancelCreating"
                    style="@style/creationNotificatiomButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="CANCEL" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>